objects/BMCServiceDesk__Scheduler_Exceptions__c.object
<CustomObject>
    <fields>
        <fullName>BMCServiceDesk__Exception__c</fullName>
        <label>Exception</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKNormalization_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Normalization Rule</label>
        <referenceTo>BMCServiceDesk__Normalization_Rule__c</referenceTo>
        <relationshipLabel>Scheduler Exceptions</relationshipLabel>
        <relationshipName>Scheduler_Exceptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Source__c</fullName>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>